<resources>
    <string name="app_name">Insider</string>

    <string name="label_error_placeholder">Something went wrong…</string>

    <string name="label_looking_for">Looking For</string>
    <string name="label_reset">Reset</string>
    <string name="label_done">Done</string>
    <string name="label_filter">Filter</string>
    <string name="label_sort_by">Sort By</string>
    <string name="label_shows">Shows</string>
    <string name="label_populars">Populars</string>
    <string name="label_featured">Featured</string>
    <string name="label_view_all">View All</string>
    <string name="label_categories">Categories</string>
    <string name="hint_search">Search</string>
</resources>
