<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_team_tool_bar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_btn_back"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:padding="@dimen/activity_default_margin"
                        android:src="@drawable/ic_back"
                        app:layout_constraintDimensionRatio="H,1:1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:textColor="@color/color_primary_text"
                        android:textSize="@dimen/dimen_20sp"
                        android:textStyle="bold"
                        app:layout_constrainedWidth="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/img_btn_back"
                        tool:text="Group" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_banners"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:splitMotionEvents="false"
                android:visibility="gone"
                app:layout_constraintDimensionRatio="H,2:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_team_tool_bar"
                tool:listitem="@layout/layout_banner_item" />

            <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
                android:id="@+id/indicator_banners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dimen_8dp"
                android:overScrollMode="never"
                android:visibility="gone"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_banners"
                app:spi_dotColor="@color/colorAccent"
                app:spi_dotSelectedColor="@color/colorAccent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_banners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="card_team_tool_bar,recycler_banners,indicator_banners" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/activity_default_margin"
                android:nestedScrollingEnabled="false"
                android:overScrollMode="never"
                android:splitMotionEvents="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_banners" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_filter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_default_margin"
                app:backgroundTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_filter_list"
                app:tint="@color/color_background" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/view_blur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_blur_view"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet_filters"
            style="@style/Widget.MaterialComponents.BottomSheet.Modal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:paddingBottom="@dimen/dimen_32dp"
            app:behavior_peekHeight="0dp"
            app:behavior_skipCollapsed="true"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <TextView
                android:id="@+id/txt_btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_default_margin"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/label_reset"
                android:textAllCaps="true"
                android:textColor="@color/color_secondary_text"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBottom_toBottomOf="@id/txt_filter"
                app:layout_constraintEnd_toStartOf="@id/txt_filter"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_filter" />

            <TextView
                android:id="@+id/txt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_default_margin"
                android:layout_marginTop="@dimen/activity_default_margin"
                android:text="@string/label_filter"
                android:textColor="@color/color_primary_text"
                android:textSize="@dimen/dimen_20sp"
                app:layout_constraintEnd_toStartOf="@id/txt_btn_done"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/txt_btn_reset"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_btn_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/activity_default_margin"
                android:padding="@dimen/dimen_4dp"
                android:text="@string/label_done"
                android:textAllCaps="true"
                android:textColor="@color/color_secondary_text"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBottom_toBottomOf="@id/txt_filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/txt_filter"
                app:layout_constraintTop_toTopOf="@id/txt_filter" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_filter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="txt_btn_reset,txt_filter,txt_btn_done" />

            <TextView
                android:id="@+id/txt_sorts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_default_margin"
                android:text="@string/label_sort_by"
                android:textAllCaps="true"
                android:textColor="@color/color_secondary_text"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_filter_title" />

            <Spinner
                android:id="@+id/spinner_sorts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/activity_default_margin"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_sorts" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier_sorts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="txt_sorts,spinner_sorts" />

            <TextView
                android:id="@+id/txt_shows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_default_margin"
                android:text="@string/label_shows"
                android:textAllCaps="true"
                android:textColor="@color/color_secondary_text"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/barrier_sorts" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_shows"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8dp"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:splitMotionEvents="false"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_shows" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>